--- a/src/app/public/modules/toolbar/toolbar.component.scss
+++ b/src/app/public/modules/toolbar/toolbar.component.scss
@@ -3,7 +3,7 @@
 .sky-toolbar-container {
     min-height: $sky-toolbar-min-height;
     background-color: $sky-toolbar-background-color;
-    padding: $sky-padding-half $sky-padding;
+    padding: $sky-padding-half $sky-padding 0;
     @include sky-border(dark, top, bottom);
     display: flex;
     flex-wrap: wrap;
@@ -11,10 +11,6 @@
     position: relative;
     ::ng-deep sky-toolbar-section:not(:first-child) .sky-toolbar-section {
       @include sky-border(dark, top);
-    }
-
-    @media (max-width: $sky-screen-sm-max) {
-      padding-bottom: 0;
     }
 
     &:not(.sky-toolbar-sectioned) {
